tests/snapshots/integration__integration_tests__user_hooks__hook_failure_status_project.snap
---
source: tests/integration_tests/user_hooks.rs
expression: stderr
---
[36m◎[39m [36mRunning pre-merge [1mproject:check[22m[39m
[107m [0m [2m[0m[2m[34mexit[0m[2m 7[0m
[0m[31m✗[39m [31m[1mpre-merge project:check[22m failed (exit code 7)[39m
