tests/snapshots/integration__integration_tests__user_hooks__hook_failure_status_user.snap
---
source: tests/integration_tests/user_hooks.rs
expression: stderr
---
[36m◎[39m [36mRunning pre-merge: [1mcheck[22m (user)[39m
[107m [0m [2m[0m[2m[34mexit[0m[2m 7[0m
[36m◎[39m [36mRunning pre-merge: [1msibling[22m (user)[39m
[107m [0m [2m[0m[2m[34mtrue[0m
[31m✗[39m [31mpre-merge command [1mcheck[22m failed (exit code 7)[39m
