tests/snapshots/integration__integration_tests__user_hooks__hook_verbose_variable_table.snap
---
source: tests/integration_tests/user_hooks.rs
info:
  program: wt
  args:
    - "-v"
    - switch
    - feature
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLAUDE_CONFIG_DIR: "[TEST_CLAUDE_CONFIG]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_ALLOW_PROTOCOL: file
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_AUTHOR_EMAIL: test@example.com
    GIT_AUTHOR_NAME: Test User
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_EMAIL: test@example.com
    GIT_COMMITTER_NAME: Test User
    GIT_CONFIG_COUNT: "2"
    GIT_CONFIG_GLOBAL: /nonexistent/wt/gitconfig
    GIT_CONFIG_KEY_0: user.useConfigOnly
    GIT_CONFIG_KEY_1: rerere.enabled
    GIT_CONFIG_SYSTEM: /nonexistent/wt/gitconfig
    GIT_CONFIG_VALUE_0: "true"
    GIT_CONFIG_VALUE_1: "false"
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    LLVM_PROFILE_FILE: "[LLVM_PROFILE_FILE]"
    OPENCODE_CONFIG_DIR: "[TEST_OPENCODE_CONFIG]"
    PATH: "[PATH]"
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_BASH_INSTALLED: "0"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_CODEX_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_FISH_INSTALLED: "0"
    WORKTRUNK_TEST_GEMINI_INSTALLED: "0"
    WORKTRUNK_TEST_MOCK_CONFIG_DIR: "[TEST_MOCK_CONFIG]"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_PARENT_SHELL: ""
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_INSTALLED: "0"
    WORKTRUNK_TEST_PROBE_TIMEOUT_MS: "60000"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WORKTRUNK_TEST_ZSH_INSTALLED: "0"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[2m○[22m [1muser:noop[22m source
[107m [0m [2m[0m[2m[34mtrue[0m
[2m○[22m [1muser:noop[22m result
[107m [0m [2m[0m[2m[34mtrue[0m
[2m○[22m [1mpre-switch[22m template variables:
[107m [0m branch                = feature
[107m [0m worktree_path         = _REPO_.feature
[107m [0m worktree_name         = repo.feature
[107m [0m commit                = 05a4a45d0b981dad5c27db59dca482836d59f89e
[107m [0m short_commit          = 05a4a45
[107m [0m upstream              = (unset)
[107m [0m base                  = main
[107m [0m base_worktree_path    = _REPO_
[107m [0m target                = feature
[107m [0m target_worktree_path  = _REPO_.feature
[107m [0m pr_number             = (unset)
[107m [0m pr_url                = (unset)
[107m [0m repo                  = repo
[107m [0m repo_path             = _REPO_
[107m [0m owner                 = (unset)
[107m [0m remote_repo           = (unset)
[107m [0m primary_worktree_path = _REPO_
[107m [0m default_branch        = main
[107m [0m remote                = origin
[107m [0m remote_url            = ../origin.git
[107m [0m cwd                   = _REPO_
[107m [0m hook_type             = pre-switch
[107m [0m hook_name             = noop
[36m◎[39m [36mRunning pre-switch: [1mnoop[22m (user)[39m
[107m [0m [2m[0m[2m[34mtrue[0m
[0m[33m▲[39m [33mWorktree for [1mfeature[22m @ [1m_REPO_.feature[22m, but cannot change directory — shell integration not installed[39m
[2m↳[22m [2mTo enable automatic cd, run [4mwt config shell install[24m[22m
